# training_framework

./: pyproject.toml
src/training_framework/: __init__.py  callback.py  event.py  runtime_context.py  to_device.py  trainer.py
