[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "training-framework"
version = "0.1.0"
description = "Lightweight event-driven training framework"
authors = [
    {name = "Dat Tran"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]